thefirstcssandhtmltogether work s saved and finish

--- a/html/main.html
+++ b/html/main.html
@@ -12,7 +12,7 @@
 <body> 
     <!-- main start -->
 <main>    
-    <header id="topside">
+    <header>
         <img id="main-logo" src="C:\Users\burak\Desktop\BT-Front-end websites\htmlandcsstogether\img/logo.png" alt="logo">
         <nav id="navcontainer" class="text-center ff-bebas">
             <ul id="nav-ul">
